fix: update client logo and overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -173,6 +173,7 @@ body {
   line-height: 1.5;
   max-width: var(--breakpoint-5xl);
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 /* Dotted Background Utilities */
